--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.1.4",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "zustand": "^5.0.3",
     "@eslint/eslintrc": "^3",
+    "@fontsource/inter": "^5.1.1",
     "eslint": "^9",
     "eslint-config-next": "15.1.4",
+    "next": "^15.1.4",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
+    "tailwindcss": "^3.4.1",
+    "zustand": "^5.0.3"
   }
 }
